<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="wreckingball.bookself.LoginActivity"
    android:background="@drawable/background00"
    >

    <Button
        android:id="@+id/Sign_Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignLeft="@+id/Log_In"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginBottom="43dp"
        android:background="@android:color/transparent"
        android:minHeight="40dip"
        android:minWidth="60dip"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:textColor="#F2852F" />

    <Button
        android:id="@+id/Log_In"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Sign_Up"
        android:layout_alignEnd="@+id/editText2"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginBottom="20dp"
        android:background="@drawable/orange_btn"
        android:minHeight="40dip"
        android:minWidth="60dip"
        android:onClick="signin"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF" />



    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:text="@string/pass_word"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:text="Email"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:src="@drawable/logo_small" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/Welcome" />
</RelativeLayout>
