<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/background00"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo_small" />

    <TextView
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:text="@string/Join_Today"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#F2852F" />

    <TextView
        android:id="@+id/First_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/join"
        android:layout_alignRight="@id/join"
        android:layout_centerInParent="true"
        android:layout_below="@+id/join"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/join"
        android:layout_toStartOf="@+id/join"
        android:text="@string/fName"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/Enter_First_Name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/First_Name"
        android:layout_centerHorizontal="true"
        android:ems="8"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/Last_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/join"
        android:layout_alignLeft="@id/join"
        android:layout_alignRight="@id/join"
        android:layout_alignStart="@id/join"
        android:layout_below="@+id/Enter_First_Name"
        android:layout_marginTop="21dp"
        android:text="@string/lName"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/Enter_Last_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@id/Enter_First_Name"
        android:layout_alignRight="@id/Enter_First_Name"
        android:layout_alignEnd="@id/Enter_First_Name"
        android:layout_alignStart="@id/Enter_First_Name"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Last_Name"
        android:ems="8"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/join"
        android:layout_alignLeft="@id/join"
        android:layout_alignRight="@id/join"
        android:layout_alignStart="@id/join"
        android:layout_below="@+id/Enter_Last_Name"
        android:layout_marginTop="21dp"
        android:text="@string/email"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/Enter_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Enter_First_Name"
        android:layout_alignRight="@id/Enter_First_Name"
        android:layout_alignEnd="@id/Enter_First_Name"
        android:layout_alignStart="@id/Enter_First_Name"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Email"
        android:ems="8"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/join"
        android:layout_alignLeft="@id/join"
        android:layout_alignRight="@id/join"
        android:layout_alignStart="@id/join"
        android:layout_below="@+id/Enter_Email"
        android:layout_marginTop="21dp"
        android:text="@string/password"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/Enter_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/Enter_First_Name"
        android:layout_alignRight="@id/Enter_First_Name"
        android:layout_alignEnd="@id/Enter_First_Name"
        android:layout_alignStart="@id/Enter_First_Name"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:ems="8"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Sign_In"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Enter_Password"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/orange_btn"
        android:minHeight="40dip"
        android:layout_marginTop="20dp"
        android:minWidth="60dip"
        android:onClick="signin"
        android:text="Sign Up"
        android:textColor="#FFFFFF" />

</RelativeLayout>
